# itsxpress

./: .gitattributes  .gitignore  .travis.yml  Dockerfile  LICENSE.txt  MANIFEST.in  README.rst  changelog.md  logfile.txt  meta.yaml  pyproject.toml  readme.rst  setup.cfg  setup.py  testout.txt
.github/workflows/: publish.yml  python-package-conda.yml  python-package-conda_EOL.yml  python-package-conda_TestAppleSilicon.yml
conda.recipe/: meta.yaml
docker-images/: Dockerfile
docs/source/: conf.py  index.rst  itsxpress.rst  modules.rst
itsxpress/: Dedup.py  ITSposition.py  SeqSample.py  SeqSampleNotPaired.py  SeqSamplePaired.py  __init__.py  _itsxpress.py  _version.py  citations.bib  comp.py  definitions.py  main.py  plugin_setup.py  q2_itsxpress.py  readme.rst
itsxpress.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
itsxpress/ITSx_db/HMMs/: A.hmm  A.hmm.h3f  A.hmm.h3i  A.hmm.h3m  A.hmm.h3p  B.hmm  B.hmm.h3f  B.hmm.h3i  B.hmm.h3m  B.hmm.h3p  C.hmm  C.hmm.h3f  C.hmm.h3i  C.hmm.h3m  C.hmm.h3p  D.hmm  D.hmm.h3f  D.hmm.h3i  D.hmm.h3m  D.hmm.h3p  E.hmm  E.hmm.h3f  E.hmm.h3i  E.hmm.h3m  E.hmm.h3p  F.hmm.h3f  F.hmm.h3i  F.hmm.h3m  G.hmm  G.hmm.h3f  G.hmm.h3i  G.hmm.h3m  G.hmm.h3p  H.hmm  H.hmm.h3f  H.hmm.h3i  H.hmm.h3m  H.hmm.h3p  I.hmm  I.hmm.h3f  (+49 more)
itsxpress__3jzycnu/: domtbl.txt  rep.fa
recipes/: meta.yaml
test_data/: paired.qza
test_data/ex_tmpdir/: rep-rc.fa  uc.txt
test_data/pairedAllForward/445cf54a-bf06-4852-8010-13a60fa1598c/: VERSION
test_data/pairedBrokenWithMANIFEST/50d5f31a-a761-4c04-990c-e7668fe6bf00/provenance/action/: action.yaml
test_data/singleIn/cfd0e65b-05fb-4329-9618-15ecd0aec9b3/provenance/action/: action.yaml
tests/: 4774-1-MSITS3_interleaved.fastq  logfile.txt  temp.fa  test_main.py  test_main_pytest.py
tests/test_data/: 4774-1-MSITS3_R1.fastq  4774-1-MSITS3_R1.fastq.zst  4774-1-MSITS3_R2.fastq  4774-1-MSITS3_merged.fastq  t2_r1.fq  t2_r2.fq  testout.fastq
tests/test_data/paired/445cf54a-bf06-4852-8010-13a60fa1598c/provenance/: citations.bib
tests/test_data/pairedBrokenMissingData/50d5f31a-a761-4c04-990c-e7668fe6bf00/provenance/: metadata.yaml
tests/test_data/singleIn/cfd0e65b-05fb-4329-9618-15ecd0aec9b3/: metadata.yaml
tests/test_data/singleOut/75aea4f5-f10e-421e-91d2-feda9fe7b2e1/data/: MANIFEST
tests/test_data/singleOut/75aea4f5-f10e-421e-91d2-feda9fe7b2e1/provenance/action/: action.yaml
tests/test_data/singleOut/75aea4f5-f10e-421e-91d2-feda9fe7b2e1/provenance/artifacts/cfd0e65b-05fb-4329-9618-15ecd0aec9b3/: metadata.yaml
tests/test_nose2pytest/test_data/: broken.fastq  t2_r1.fq
tests_plugin/: test_main.py
tests_plugin/test_data/paired/445cf54a-bf06-4852-8010-13a60fa1598c/: metadata.yaml
tests_plugin/test_data/pairedAllForward/445cf54a-bf06-4852-8010-13a60fa1598c/data/: MANIFEST
tests_plugin/test_data/singleOut/75aea4f5-f10e-421e-91d2-feda9fe7b2e1/provenance/: metadata.yaml
