# setup.cfg file at the root directory
[metadata]
name = itsxpress
version = 2.0.0
author=Adam R. Rivers & Sveinn V. Einarsson
author_email=adam.rivers@ars.usda.gov
license=License :: CC0 1.0 Universal CC0 1.0 Public Domain Dedication
description=Rapidly trim sequences down to their Internally Transcribed Spacer ITS regions
long_description= file:README.rst
keywords=Amplicon sequencing fungal ITS
url=http://github.com/usda-ars-gbru/itsxpress
classifiers=
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Development Status :: 3 - Alpha

[options]
tests-require = nose
python_requires = >3.5
zip_safe = False
include_package_data=True
packages = find:
install_requires = 
    itsxpress
    biopython>=1.60
    vsearch~=2.21.1
    hmmer~=3.1b2
[test]
test-suite = nose.collector

[options.entry_points]
console_scripts = 
    itsxpress=itsxpress.main:main
