# setup.cfg file at the root directory
[metadata]
name = itsxpress
version = 2.0.0
author=Adam R. Rivers & Sveinn V. Einarsson
author_email=adam.rivers@ars.usda.gov
license=License :: CC0 1.0 Universal CC0 1.0 Public Domain Dedication
description=Rapidly trim sequences down to their Internally Transcribed Spacer ITS regions
long_description= file:README.rst
keywords=Amplicon sequencing fungal ITS
url=http://github.com/usda-ars-gbru/itsxpress
classifiers=
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.5
    Development Status :: 3 - Alpha

[options]
python_requires = >3.5
zip_safe = False
include_package_data=True
packages = find:
install_requires = 
    itsxpress>=2.0.0
    biopython>=1.60
    vsearch
    hmmer
    pyzstd
    pandas

[options.extras_require]
test = 
    pytest

[options.entry_points]
console_scripts = 
    itsxpress=itsxpress.main:main
    qiime2.plugins=q2_itsxpress.plugin_setup:plugin
